# next_train_telegram_bot

./: .env.example  .env.test  .gitignore  Dockerfile  README.MD  bot.py  config.py  docker-compose.yml  pyproject.toml  pytest.ini  schedule.db  services.py  setup.cfg
app/: Dockerfile  bot.py  config.py  messages.py  schedule.sql  services.py
src/: Dockerfile  main.py  requirements.txt
src/app/: bot.py  commands.py  config.py  db.py  decorators.py  handlers.py  keyboards.py  messages.py  models.py  orm_db.py  schedule.py  services.py  stations.py  utils.py
src/data/: init_db.sql  populate_db.sql  schedule.sql
tests/: conftest.py  test_db.py  test_stations.py  test_utils.py
tests/fixtures/: bot_users.py  schedules.py
