[tool.poetry]
name = "next-train-telegram-bot"
version = "0.1.0"
description = "TelegramBot for inform you about next train in metro Yekaterinburg"
authors = ["Ilya Kolesnikov <zloy-gamer@yandex.ru>"]
readme = "README.MD"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
python-telegram-bot = {version = "^20.5", extras = ["job-queue"]}
pydantic = {version = "^2.0", extras = ["dotenv"]}
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-dotenv = "^0.5.2"
mypy = "^1.10.0"


[tool.mypy]
plugins = [
  "pydantic.mypy",
]


[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
python_files = [
  "test_*.py",
]
env_override_existing_values = 1
env_files = ".env.test"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
